--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,13 @@ auth.error.access=access failed
 auth.error.refresh=refresh failed
 auth.error.remove=remove failed
 auth.error.signup=sign up failed
+
+todo-lists.success.getAllTodoLists=Successfully retrieved all todo lists.
+todo-lists.success.createTodoList=Todo list created successfully.
+todo-lists.success.updateTodoList=Todo list updated successfully.
+todo-lists.success.deleteTodoList=Todo list deleted successfully.
+
+todo-lists.error.getAllTodoLists=Failed to retrieve todo lists.
+todo-lists.error.createTodoList=Failed to create todo list.
+todo-lists.error.updateTodoList=Failed to update todo list.
+todo-lists.error.deleteTodoList=Failed to delete todo list.
