--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -10,3 +10,13 @@ auth.error.access=échec d'accès
 auth.error.refresh=échec d'actualisation
 auth.error.remove=échec de suppression
 auth.error.signup=échec d'inscription
+
+todo-lists.success.getAllTodoLists=Toutes les listes de tâches ont été récupérées avec succès.
+todo-lists.success.createTodoList=Liste de tâches créée avec succès.
+todo-lists.success.updateTodoList=Liste de tâches mise à jour avec succès.
+todo-lists.success.deleteTodoList=Liste de tâches supprimée avec succès.
+
+todo-lists.error.getAllTodoLists=Échec de la récupération des listes de tâches.
+todo-lists.error.createTodoList=Échec de la création de la liste de tâches.
+todo-lists.error.updateTodoList=Échec de la mise à jour de la liste de tâches.
+todo-lists.error.deleteTodoList=Échec de la suppression de la liste de tâches.
