--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -10,3 +10,13 @@ auth.error.access=truy c?p không thành công
 auth.error.refresh=làm m?i không thành công
 auth.error.remove=xóa không thành công
 auth.error.signup=??ng ký không thành công
+
+todo-lists.success.getAllTodoLists=?ã truy xu?t thành công t?t c? danh sách vi?c c?n làm.
+todo-lists.success.createTodoList=?ã t?o danh sách vi?c c?n làm thành công.
+todo-lists.success.updateTodoList=?ã c?p nh?t danh sách vi?c c?n làm thành công.
+todo-lists.success.deleteTodoList=?ã xóa danh sách vi?c c?n làm thành công.
+
+todo-lists.error.getAllTodoLists=Không truy xu?t ???c danh sách vi?c c?n làm.
+todo-lists.error.createTodoList=Không t?o ???c danh sách vi?c c?n làm.
+todo-lists.error.updateTodoList=Không c?p nh?t ???c danh sách vi?c c?n làm.
+todo-lists.error.deleteTodoList=Không xóa ???c danh sách vi?c c?n làm.
