--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,22 +1,27 @@
 common.success=success
 common.error=failed
-
 auth.success.access=access success token
 auth.success.refresh=refresh success token
 auth.success.remove=remove success token
 auth.success.signup=sign up successfully
-
 auth.error.access=access failed
 auth.error.refresh=refresh failed
 auth.error.remove=remove failed
 auth.error.signup=sign up failed
-
 todo-lists.success.getAllTodoLists=Successfully retrieved all todo lists.
 todo-lists.success.createTodoList=Todo list created successfully.
 todo-lists.success.updateTodoList=Todo list updated successfully.
 todo-lists.success.deleteTodoList=Todo list deleted successfully.
-
 todo-lists.error.getAllTodoLists=Failed to retrieve todo lists.
 todo-lists.error.createTodoList=Failed to create todo list.
 todo-lists.error.updateTodoList=Failed to update todo list.
 todo-lists.error.deleteTodoList=Failed to delete todo list.
+todo.success.createTodo=Todo item created successfully.
+todo.success.updateTodo=Todo item updated successfully.
+todo.success.deleteTodo=Todo item deleted successfully.
+todo.success.getTodosByList=Todos retrieved successfully for the specified list.
+todo.error.createTodo=Failed to create todo item. Please check the input and try again.
+todo.error.updateTodo=Failed to update todo item. Please check the input and try again.
+todo.error.deleteTodo=Failed to delete todo item. The item might not exist or there was an error processing the request.
+todo.error.getTodosByList=Failed to retrieve todos for the specified list. Please try again later.
+
