--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,22 +1,26 @@
 common.success=succès
 common.error=échec
-
 auth.success.access=jeton d'accès réussi
 auth.success.refresh=jeton d'actualisation réussi
 auth.success.remove=supprimer le jeton de réussite
 auth.success.signup=inscription réussie
-
 auth.error.access=échec d'accès
 auth.error.refresh=échec d'actualisation
 auth.error.remove=échec de suppression
 auth.error.signup=échec d'inscription
-
 todo-lists.success.getAllTodoLists=Toutes les listes de tâches ont été récupérées avec succès.
 todo-lists.success.createTodoList=Liste de tâches créée avec succès.
 todo-lists.success.updateTodoList=Liste de tâches mise à jour avec succès.
 todo-lists.success.deleteTodoList=Liste de tâches supprimée avec succès.
-
 todo-lists.error.getAllTodoLists=Échec de la récupération des listes de tâches.
 todo-lists.error.createTodoList=Échec de la création de la liste de tâches.
 todo-lists.error.updateTodoList=Échec de la mise à jour de la liste de tâches.
 todo-lists.error.deleteTodoList=Échec de la suppression de la liste de tâches.
+todo.success.createTodo=Élément de tâche créé avec succès.
+todo.success.updateTodo=Élément de tâche mis à jour avec succès.
+todo.success.deleteTodo=Élément de tâche supprimé avec succès.
+todo.success.getTodosByList=Tâches récupérées avec succès pour la liste spécifiée.
+todo.error.createTodo=Échec de la création de l'élément de tâche. Veuillez vérifier la saisie et réessayer.
+todo.error.updateTodo=Échec de la mise à jour de l'élément de tâche. Veuillez vérifier la saisie et réessayer.
+todo.error.deleteTodo=Échec de la suppression de l'élément de tâche. L'élément n'existe peut-être pas ou une erreur s'est produite lors du traitement de la demande.
+todo.error.getTodosByList=Échec de la récupération des tâches pour la liste spécifiée. Veuillez réessayer ultérieurement.
