upload react fe

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 common.success=success
-common.error=failed
+common.success.delete.user=User deleted successfully
 auth.success.access=access success token
 auth.success.refresh=refresh success token
 auth.success.remove=remove success token
