--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,5 +1,5 @@
 common.success=succès
-common.error=échec
+common.success.delete.user=Utilisateur supprimé avec succès
 auth.success.access=jeton d'accès réussi
 auth.success.refresh=jeton d'actualisation réussi
 auth.success.remove=supprimer le jeton de réussite
