--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -1,26 +1,14 @@
 common.success=thành công
-common.error=th?t b?i
+common.success.delete.user=?ã xóa ng??i dùng thành công
 auth.success.access=mã thông báo thành công truy c?p
 auth.success.refresh=mã thông báo thành công làm m?i
 auth.success.remove=xóa mã thông báo thành công
 auth.success.signup=??ng ký thành công
-auth.error.access=truy c?p không thành công
-auth.error.refresh=làm m?i không thành công
-auth.error.remove=xóa không thành công
-auth.error.signup=??ng ký không thành công
 todo-lists.success.getAllTodoLists=?ã truy xu?t thành công t?t c? danh sách vi?c c?n làm.
 todo-lists.success.createTodoList=?ã t?o danh sách vi?c c?n làm thành công.
 todo-lists.success.updateTodoList=?ã c?p nh?t danh sách vi?c c?n làm thành công.
 todo-lists.success.deleteTodoList=?ã xóa danh sách vi?c c?n làm thành công.
-todo-lists.error.getAllTodoLists=Không truy xu?t ???c danh sách vi?c c?n làm.
-todo-lists.error.createTodoList=Không t?o ???c danh sách vi?c c?n làm.
-todo-lists.error.updateTodoList=Không c?p nh?t ???c danh sách vi?c c?n làm.
-todo-lists.error.deleteTodoList=Không xóa ???c danh sách vi?c c?n làm.
 todo.success.createTodo=M?c Todo ?ã ???c t?o thành công.
 todo.success.updateTodo=M?c Todo ?ã ???c c?p nh?t thành công.
 todo.success.deleteTodo=M?c Todo ?ã ???c xóa thành công.
 todo.success.getTodosByList=?ã truy xu?t thành công Todos cho danh sách ?ã ch? ??nh.
-todo.error.createTodo=Không t?o ???c m?c Todo. Vui lòng ki?m tra thông tin ??u vào và th? l?i.
-todo.error.updateTodo=Không c?p nh?t ???c m?c Todo. Vui lòng ki?m tra thông tin ??u vào và th? l?i.
-todo.error.deleteTodo=Không xóa ???c m?c Todo. M?c có th? không t?n t?i ho?c ?ã x?y ra l?i khi x? lý yêu c?u.
-todo.error.getTodosByList=Không truy xu?t ???c Todos cho danh sách ?ã ch? ??nh. Vui lòng th? l?i sau.
